[tool.poetry]
name = "relation-extraction-paper-chat"
version = "0.1.0"
description = "Relation Extraction Demo for Epigene Labs' paper chat"
authors = ["Aryo Gema <aryopg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.20.1"
neo4j = "^4.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
